--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@ plugins {
   id 'application'
   id 'org.javamodularity.moduleplugin' version '1.8.12'
   id 'org.openjfx.javafxplugin' version '0.0.13'
-  id 'org.beryx.jlink' version '2.25.0'
+  id 'org.beryx.jlink' version '3.1.1'
 }
 
 group 'com.example'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
   mavenCentral()
@@ -43,7 +43,6 @@ javafx {
 }
 
 dependencies {
-
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
@@ -52,10 +51,35 @@ test {
 useJUnitPlatform()}
 
 jlink {
-  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+  imageZip = project.file("${layout.buildDirectory}/distributions/app-${javafx.platform.classifier}.zip")
   options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
   launcher {
-    name = 'app'
+    name = 'FinanceApplication'
+  }
+  jpackage {
+//    if (org.gradle.internal.os.OperatingSystem.current().windows) {
+//      installerName = 'FinanceApplication'
+//      installerType = 'exe'
+//      imageOptions += ['--icon', 'src/main/resources/com/example/demo/assets/icon.ico']
+//      installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut', '--verbose']
+//    }
+//    // MacOS-specific configuration
+//    if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
+//      installerName = 'FinanceApplication'
+//      installerType = 'dmg'
+//      imageOptions += ['--icon', 'src/main/resources/com/example/demo/assets/icon.icns']
+//      installerOptions += ['--app-version', '1.0.0']
+//      destinationDir = new File("${System.getProperty('user.home')}/Library/Application Support/FinanceApplication")
+//    }
+//
+//    // Linux-specific configuration
+//    if (org.gradle.internal.os.OperatingSystem.current().unix) {
+//      installerName = 'FinanceApplication'
+//      installerType = 'deb' // You can choose 'rpm' as well depending on the target
+//      imageOptions += ['--icon', 'src/main/resources/com/example/demo/assets/icon.png']
+//      installerOptions += ['--app-version', '1.0.0']
+//      destinationDir = new File("${System.getProperty('user.home')}/FinanceApplication")
+//    }
   }
 }
 
